feat: add development proxy and server scripts >> >> - Added a proxy configuration for local development. >> - Introduced a new script to run the server concurrently with the Expo start command. >> - Added nodemon for automatic server restarts during development. >> - Updated package dependencies to include npm-run-all for parallel script execution.

--- a/attendence-backend/.env
+++ b/attendence-backend/.env
@@ -1,12 +1,7 @@
-# SQL Server Connection Details (GET THESE FROM YOUR IT TEAM)
-DB_USER=Test
-DB_PASSWORD=User@1234
-DB_SERVER=192.168.2.4
-DB_NAME=Test    # Database name
+# OPTION 1: With instance name (requires SQL Browser service running)
+DB_SERVER=localhost
 
-# Server Configuration
-PORT=3000
 
-# Security (Optional)
-API_KEY=your-secret-api-key-123  # If you want to add API key authentication
-ALLOWED_ORIGINS=http://localhost:8081,http://192.168.1.5:8081
+
+DB_NAME=nitesh
+PORT=1433
