--- a/attendence-backend/package.json
+++ b/attendence-backend/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "API for bus attendance system",
   "main": "server.js",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "server": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mssql": "^10.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mssql": "^10.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
