--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "my-attendance-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "expo start",
+    "dev": "npm-run-all --parallel server start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "server": "nodemon server.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -31,6 +34,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "npm-run-all": "^4.1.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
